--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 # We still use this legacy machine executor for building docker images.
 # TODO: use docker executor and setup_remote_docker for these builds.
 defaults: &defaults
+  resource_class: adamzammit/adamtest
   machine:
     image: ubuntu-2004:202201-02
   working_directory: ~/repo
@@ -53,6 +54,7 @@ jobs:
 
   unit-test:
     executor: clojure
+    resource_class: adamzammit/adamtest
     steps:
       - browser-tools/install-chrome
       - browser-tools/install-chromedriver
@@ -69,6 +71,7 @@ jobs:
 
   cljfmt:
     executor: clojure
+    resource_class: adamzammit/adamtest
     steps:
       - checkout
       - restore_cache:
@@ -77,6 +80,7 @@ jobs:
 
   integration-test:
     executor: db
+    resource_class: adamzammit/adamtest
     steps:
       - checkout
       - restore_cache:
@@ -110,6 +114,7 @@ jobs:
 
   build:
     executor: clojure
+    resource_class: adamzammit/adamtest
     steps:
       - checkout
       - restore_cache:
