--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,8 @@ jobs:
     executor: clojure
     resource_class: adamzammit/adamtest
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: false
       - checkout
       - restore_cache:
           keys:
@@ -73,6 +75,8 @@ jobs:
     executor: clojure
     resource_class: adamzammit/adamtest
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: false
       - checkout
       - restore_cache:
           key: *cache-key
@@ -82,6 +86,8 @@ jobs:
     executor: db
     resource_class: adamzammit/adamtest
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: false
       - checkout
       - restore_cache:
           key: *cache-key
@@ -94,6 +100,8 @@ jobs:
     resource_class: adamzammit/adamtest
     parallelism: 4
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: false
       - browser-tools/install-chrome
       - browser-tools/install-chromedriver
       - checkout
@@ -116,6 +124,8 @@ jobs:
     executor: clojure
     resource_class: adamzammit/adamtest
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: false
       - checkout
       - restore_cache:
           key: *cache-key
