--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ orbs:
   browser-tools: circleci/browser-tools@1.3.0
 
 executors:
+  builder:
+    docker:
+      - image: cimg/base:current
   clojure:
     docker:
       - image: cimg/clojure:1.11.1-browsers
@@ -130,9 +133,8 @@ jobs:
             - target/uberjar/rems.jar
 
   docker-snapshot:
+    executor: builder
     resource_class: adamzammit/cicdmicrok8s
-    docker:
-      - image: cimg/base:current
     working_directory: ~/repo
     steps:
       - checkout
